exercie 1: variable and console output

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             let city = "tokyo";
             let student = true;
 
-            console.log(name);
-            console.log(age);
-            console.log(city);
-            console.log(student);
+            console.log("Name    : ", name);
+            console.log("Age     : ", age);
+            console.log("City    : ", city);
+            console.log("Student : ", student);
         </script>
     </body>
 </html>
