Exercise 1: Console output and Variable

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>JavaScript-Basic</title>
@@ -9,15 +10,15 @@
         <script>
             console.log("Hello, This is my first JavaScript!");
 
-            let name = "naka";
+            let name = "Naka";
             let age = 20;
-            let city = "tokyo";
-            let student = true;
+            let city = "Tokyo";
+            let isStudent = true;
 
             console.log("Name    : ", name);
             console.log("Age     : ", age);
             console.log("City    : ", city);
-            console.log("Student : ", student);
+            console.log("Student : ", isStudent);
         </script>
     </body>
 </html>
