--- a/exercise1.html
+++ b/exercise1.html
@@ -9,15 +9,16 @@
 
         <script>
             console.log("Hello, This is my first JavaScript!");
+            console.log("Console Output and Variable")
 
             let name = "Naka";
             let age = 20;
             let city = "Tokyo";
             let isStudent = true;
 
-            console.log("Name    : ", name);
-            console.log("Age     : ", age);
-            console.log("City    : ", city);
+            console.log("Name : ", name);
+            console.log("Age : ", age);
+            console.log("City : ", city);
             console.log("Student : ", isStudent);
         </script>
     </body>
