--- a/exercise4.html
+++ b/exercise4.html
@@ -6,9 +6,10 @@
 
     <body>
         <h1>Hello JavaScript</h1>
-        <h2>Exercise 1</h2>
-        <h3>Console Output and Variable</h3>
+        <h2>Exercise 4</h2>
+        <h3>Looping (for & while)</h3>
 
-        <script src="exercise1.js"></script>
+        <script src="exercise4.js"></script>
     </body>
+
 </html>
