--- a/exercise2.html
+++ b/exercise2.html
@@ -6,27 +6,9 @@
 
     <body>
         <h1>Hello JavaScript</h1>
+        <h2>Exercise 2</h2>
+        <h3>Type Data and Operator</h3>
 
-        <script>
-            console.log("Type Data and Operator");
-            // String
-            let name = "Naka";
-            let city = "Tokyo";
-
-            // Number
-            let age = 20;
-            let hight = 185.9;
-
-            // Boolean
-            let isStudent = true;
-
-            //Operator
-            let canRegister = age >= 18 && isStudent;
-
-            console.log("Age : ", age);
-            console.log("Student : ", isStudent);
-            console.log("Can Register :", canRegister);
-
-        </script>
+        <script src="exercise2.js"></script>
     </body>
 </html>
