--- a/exercise3.html
+++ b/exercise3.html
@@ -6,23 +6,10 @@
 
     <body>
         <h1>Hello JavaScript</h1>
+        <h2>Exercise 3</h2>
+        <h3>Conditional (if/else)</h3>
 
-        <script>
-            console.log("Conditional (if/else)");
-
-            let age = 20;
-            let isStudent = true;
-            let canRegister = age >= 18 && isStudent;
-
-            console.log("Age : ", age);
-            console.log("Student : ", isStudent);
-
-            if (canRegister){
-                console.log("Registration Accepted");
-            } else {
-                console.log("Registration Rejected");
-            }
-
-        </script>
+        <script src="exercise3.js"></script>
     </body>
+
 </html>
