--- a/html/exercise1.html
+++ b/html/exercise1.html
@@ -9,6 +9,6 @@
         <h2>Exercise 1</h2>
         <h3>Console Output and Variable</h3>
 
-        <script src="exercise1.js"></script>
+        <script src="../js/exercise1.js"></script>
     </body>
 </html>
