--- a/html/exercise3.html
+++ b/html/exercise3.html
@@ -9,7 +9,7 @@
         <h2>Exercise 3</h2>
         <h3>Conditional (if/else)</h3>
 
-        <script src="exercise3.js"></script>
+        <script src="../js/exercise3.js"></script>
     </body>
 
 </html>
