--- a/html/exercise4.html
+++ b/html/exercise4.html
@@ -6,9 +6,10 @@
 
     <body>
         <h1>Hello JavaScript</h1>
-        <h2>Exercise 2</h2>
-        <h3>Type Data and Operator</h3>
+        <h2>Exercise 4</h2>
+        <h3>Looping (for & while)</h3>
 
-        <script src="exercise2.js"></script>
+        <script src="../js/exercise4.js"></script>
     </body>
+
 </html>
