--- a/html/exercise2.html
+++ b/html/exercise2.html
@@ -6,10 +6,9 @@
 
     <body>
         <h1>Hello JavaScript</h1>
-        <h2>Exercise 4</h2>
-        <h3>Looping (for & while)</h3>
+        <h2>Exercise 2</h2>
+        <h3>Type Data and Operator</h3>
 
-        <script src="exercise4.js"></script>
+        <script src="../js/exercise2.js"></script>
     </body>
-
 </html>
