--- a/html/exercise5.html
+++ b/html/exercise5.html
@@ -6,9 +6,9 @@
 
     <body>
         <h1>Hello JavaScript</h1>
-        <h2>Exercise 4</h2>
-        <h3>Looping (for & while)</h3>
+        <h2>Exercise 5</h2>
+        <h3>Function</h3>
 
-        <script src="../js/exercise4.js"></script>
+        <script src="../js/exercise5.js"></script>
     </body>
 </html>
