--- a/html/exercise-basic.html
+++ b/html/exercise-basic.html
@@ -6,8 +6,7 @@
 
     <body>
         <h1>Hello JavaScript</h1>
-        <h2>Exercise 11</h2>
-        <h3>submit EVENT & preventDefault()</h3>
+        <h2>Exercise - Basic</h2>
 
         <form id="form">
             <input type="text" id="name" placeholder="Name">
@@ -24,6 +23,6 @@
         <h3>List Of Registrants</h3>
         <ul id="list"></ul>
 
-        <script src="../js/exercise11.js"></script>
+        <script src="../js/exercise-basic.js"></script>
     </body>
 </html>
