--- a/html/exercise12.html
+++ b/html/exercise12.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Hello JavaScript</h1>
         <h2>Exercise 12</h2>
-        <h3>Render List</h3>
+        <h3>Render List & Clear All</h3>
 
         <form id="form">
             <input type="text" id="name" placeholder="Name">
